--- a/frontend/src/app/formulario-sesion/formulario-sesion.component.html
+++ b/frontend/src/app/formulario-sesion/formulario-sesion.component.html
@@ -4,14 +4,32 @@
 </div>
 <div class="modal-body">
   <div class="form-group">
-      <label for="nombre">Nombre:</label>
-      <input class="form-control" id="nombre" [(ngModel)]="contacto.nombre" placeholder="nombre">
-      <label for="apellidos">Apellidos:</label>
-      <input class="form-control" id="apellidos" [(ngModel)]="contacto.apellidos" placeholder="apellidos">
-      <label for="email">E-mail:</label>
-      <input class="form-control" id="email" [(ngModel)]="contacto.email" placeholder="fulanito@mengano.com">
-      <label for="telefono">Teléfono:</label>
-      <input class="form-control" id="telefono" [(ngModel)]="contacto.telefono" placeholder="(34) 123456789">
+      <label for="pulsaciones">Pulsaciones del corazón:</label>
+      <input class="form-control" id="nombre" [(ngModel)]="contacto.nombre" placeholder="pulsaciones">
+      <label for="apellidos">Peso:</label>
+      <input class="form-control" id="apellidos" [(ngModel)]="contacto.apellidos" placeholder="peso">
+      <label for="email">Calorías consumidas estimadas:</label>
+      <input class="form-control" id="email" [(ngModel)]="contacto.email" placeholder="calorias">
+      <label for="telefono">Tiempo de ejercicio:</label>
+      <input class="form-control" id="telefono" [(ngModel)]="contacto.telefono" placeholder="tiempo">
+      <label for="telefono">Comentario:</label>
+      <input class="form-control" id="telefono" [(ngModel)]="contacto.telefono" placeholder="comentario">
+      <label for="telefono">Vídeo/foto:</label>
+      <input class="form-control" id="telefono" [(ngModel)]="contacto.telefono" placeholder="url">
+      <div class="form-check">
+        <label class="form-check-label" for="exampleCheckbox">Presencial </label>
+        <input class="form-check-input" type="checkbox" id="exampleCheckbox">
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <label for="fechaInicio">Fecha de inicio:</label>
+          <input type="date" class="form-control" id="fechaInicio">
+        </div>
+        <div class="col-md-6 mt-2 mt-md-0">
+          <label for="fechaFin">Fecha de fin:</label>
+          <input type="date" class="form-control" id="fechaFin">
+        </div>
+      </div>
 
   </div>
 </div>
