--- a/frontend/src/app/formulario-sesion/formulario-sesion.component.html
+++ b/frontend/src/app/formulario-sesion/formulario-sesion.component.html
@@ -1,21 +1,21 @@
 <div class="modal-header">
-  <h4 class="modal-title" id="modal-basic-title">{{accion}} contacto</h4>
+  <h4 class="modal-title" id="modal-basic-title">{{accion}} sesión</h4>
   <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cierre usuario')"></button>
 </div>
 <div class="modal-body">
   <div class="form-group">
       <label for="pulsaciones">Pulsaciones del corazón:</label>
-      <input class="form-control" id="nombre" [(ngModel)]="contacto.nombre" placeholder="pulsaciones">
+      <input class="form-control" id="nombre" [(ngModel)]="sesion.nombre" placeholder="pulsaciones">
       <label for="apellidos">Peso:</label>
-      <input class="form-control" id="apellidos" [(ngModel)]="contacto.apellidos" placeholder="peso">
+      <input class="form-control" id="apellidos" [(ngModel)]="sesion.apellidos" placeholder="peso">
       <label for="email">Calorías consumidas estimadas:</label>
-      <input class="form-control" id="email" [(ngModel)]="contacto.email" placeholder="calorias">
+      <input class="form-control" id="email" [(ngModel)]="sesion.email" placeholder="calorias">
       <label for="telefono">Tiempo de ejercicio:</label>
-      <input class="form-control" id="telefono" [(ngModel)]="contacto.telefono" placeholder="tiempo">
+      <input class="form-control" id="telefono" [(ngModel)]="sesion.telefono" placeholder="tiempo">
       <label for="telefono">Comentario:</label>
-      <input class="form-control" id="telefono" [(ngModel)]="contacto.telefono" placeholder="comentario">
+      <input class="form-control" id="telefono" [(ngModel)]="sesion.telefono" placeholder="comentario">
       <label for="telefono">Vídeo/foto:</label>
-      <input class="form-control" id="telefono" [(ngModel)]="contacto.telefono" placeholder="url">
+      <input class="form-control" id="telefono" [(ngModel)]="sesion.telefono" placeholder="url">
       <div class="form-check">
         <label class="form-check-label" for="exampleCheckbox">Presencial </label>
         <input class="form-check-input" type="checkbox" id="exampleCheckbox">
@@ -34,5 +34,5 @@
   </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="guardarContacto()">Guardar</button>
+  <button type="button" class="btn btn-outline-dark" (click)="guardarSesion()">Guardar</button>
 </div>
