--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
         <button *ngFor="let sesion of sesiones"
           class="list-group-item list-group-item-action"
           (click)="elegirSesion(sesion)"
-          [class.active]="sesion === sesionElegido">{{sesion.nombre}}</button>
+          [class.active]="sesion === sesionElegido">{{sesion.id}}</button>
       </div>
       <br>
       <button type="button" class="btn btn-outline-primary bi bi-plus-lg" (click)="aniadirSesion()"></button>
