--- a/frontend/src/app/formulario-sesion/formulario-sesion.component.html
+++ b/frontend/src/app/formulario-sesion/formulario-sesion.component.html
@@ -5,17 +5,17 @@
 <div class="modal-body">
   <div class="form-group">
       <label for="pulsaciones">Pulsaciones del corazón:</label>
-      <input class="form-control" id="nombre" [(ngModel)]="sesion.nombre" placeholder="pulsaciones">
+      <input class="form-control" id="nombre" placeholder="pulsaciones">
       <label for="apellidos">Peso:</label>
-      <input class="form-control" id="apellidos" [(ngModel)]="sesion.apellidos" placeholder="peso">
+      <input class="form-control" id="apellidos" placeholder="peso">
       <label for="email">Calorías consumidas estimadas:</label>
-      <input class="form-control" id="email" [(ngModel)]="sesion.email" placeholder="calorias">
+      <input class="form-control" id="email" placeholder="calorias">
       <label for="telefono">Tiempo de ejercicio:</label>
-      <input class="form-control" id="telefono" [(ngModel)]="sesion.telefono" placeholder="tiempo">
+      <input class="form-control" id="telefono" placeholder="tiempo">
       <label for="telefono">Comentario:</label>
-      <input class="form-control" id="telefono" [(ngModel)]="sesion.telefono" placeholder="comentario">
+      <input class="form-control" id="telefono" placeholder="comentario">
       <label for="telefono">Vídeo/foto:</label>
-      <input class="form-control" id="telefono" [(ngModel)]="sesion.telefono" placeholder="url">
+      <input class="form-control" id="telefono" placeholder="url">
       <div class="form-check">
         <label class="form-check-label" for="exampleCheckbox">Presencial </label>
         <input class="form-check-input" type="checkbox" id="exampleCheckbox">
