--- a/frontend/src/app/formulario-sesion/formulario-sesion.component.html
+++ b/frontend/src/app/formulario-sesion/formulario-sesion.component.html
@@ -7,11 +7,11 @@
       <div class="row">
         <div class="col-md-6">
          <label for="fechaInicio">Inicio:</label>
-         <input type="date" class="form-control" id="inicio" [(ngModel)]="sesion.inicio">
+         <input type="datetime-local" class="form-control" id="inicio" [(ngModel)]="sesion.inicio">
        </div>
        <div class="col-md-6 mt-2 mt-md-0">
           <label for="fechaFin">Fin:</label>
-          <input type="date" class="form-control" id="fin" [(ngModel)]="sesion.fin">
+          <input type="datetime-local" class="form-control" id="fin" [(ngModel)]="sesion.fin">
         </div>
       </div>
       
