Corrección de fechas
Cambio de los tipos fechaInicio y fechaFin de string a Date para mayor legibilidad.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
         <button *ngFor="let plan of planes"
           class="list-group-item list-group-item-action"
           (click)="elegirPlan(plan)"
-          [class.active]="plan === planElegido">{{plan.fechaInicio}} - {{plan.fechaFin}}</button>
+          [class.active]="plan === planElegido">{{plan?.fechaInicio?.toLocaleString()}} - {{plan?.fechaFin?.toLocaleString()}}</button>
       </div>
       <br>
     </div>
