Al editar una sesión ahora se actualizan los detalles de la sesión. Además, se elimina el ngOnChanges y las sesiones de un plan las busca la componente principal al elegir el plan.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,7 +10,7 @@
       </div>
       <br>
       <div class="col-md-6" *ngIf="planElegido">
-        <app-sesion [plan]="planElegido"></app-sesion>
+        <app-sesion [sesiones]="sesionesPlan" [planId]="planElegido.id"></app-sesion>
       </div>
     </div>
   </div>
