--- a/frontend/src/app/sesion/sesion.component.html
+++ b/frontend/src/app/sesion/sesion.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 mt-3">
       <h2>Lista de sesiones</h2>
       <div class="list-group">
         <button *ngFor="let sesion of sesiones"
