Hacer que no se desborde el texto

--- a/frontend/src/app/detalle-sesion/detalle-sesion.component.html
+++ b/frontend/src/app/detalle-sesion/detalle-sesion.component.html
@@ -14,7 +14,7 @@
 </div>
 <div class="row">
   <label class="col-lg-6">Trabajo realizado:</label>
-  <span class="col-lg-6 offset-2 offset-md-0">{{sesion?.trabajoRealizado}}</span>
+  <span class="col-lg-6 offset-2 offset-md-0 text">{{sesion?.trabajoRealizado}}</span>
 </div>
 <div class="row">
   <label class="col-lg-6">Multimedia:</label>
@@ -22,7 +22,7 @@
 </div>
 <div class="row">
   <label class="col-lg-6">Descripción:</label>
-  <span class="col-lg-6 offset-2 offset-md-0">{{sesion?.descripcion}}</span>
+  <span class="col-lg-6 offset-2 offset-md-0 text">{{sesion?.descripcion}}</span>
 </div>
 <div class="row">
   <label class="col-lg-6">Presencial:</label>
