--- a/frontend/src/app/formulario-sesion/formulario-sesion.component.html
+++ b/frontend/src/app/formulario-sesion/formulario-sesion.component.html
@@ -31,8 +31,8 @@
         <label>Datos de salud:</label>
       
         <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Pulsaciones">
-          <span class="input-group-text" id="pulsaciones-addon" [(ngModel)]="sesion.datosSalud[0]">pulsaciones/min</span>
+          <input type="text" class="form-control" placeholder="Pulsaciones" [(ngModel)]="sesion.datosSalud[0]">
+          <span class="input-group-text" >pulsaciones/min</span>
         </div>
       
         <div class="input-group mb-3">
