--- a/frontend/src/app/detalle-sesion/detalle-sesion.component.html
+++ b/frontend/src/app/detalle-sesion/detalle-sesion.component.html
@@ -48,7 +48,7 @@
 
 
 <div class="row">
-  <button class="col-auto btn btn-outline-primary" (click)="eliminarSesion()">Eliminar <i class="bi bi-trash-fill"></i></button>
+  <button class="col-auto btn btn-outline-danger" (click)="eliminarSesion()">Eliminar <i class="bi bi-trash-fill"></i></button>
   <div class="col-1"></div>
   <button class="col-auto btn btn-outline-primary" (click)="editarSesion()">Editar <i class="bi bi-pencil-fill"></i></button>
 </div>
