--- a/frontend/src/app/detalle-sesion/detalle-sesion.component.css
+++ b/frontend/src/app/detalle-sesion/detalle-sesion.component.css
@@ -3,3 +3,8 @@
     overflow-wrap: break-word; /* lo mismo para navegadores más antiguos */
     max-width: 100%; 
   }
+
+  .label {
+    font-weight: bold;
+    color: #1a1a1a;
+  }
