--- a/frontend/src/app/sesion/sesion.component.css
+++ b/frontend/src/app/sesion/sesion.component.css
@@ -1,17 +1,44 @@
-/* Animación para el "hola" */
-@keyframes holaSlideIn {
-    from {
-      opacity: 0;
-      transform: translateY(50%);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-  
-  /* Estilo para el "hola" */
-  .hola-animation {
-    animation: holaSlideIn 0.5s ease-in-out;
-  }
-  
+.sesion {
+  background-color: #1d3557;
+  border-color: #457b9d;
+  border-radius: 5px;
+  margin: 15px;
+}
+
+.sesiones {
+  text-align: center;
+}
+
+.text {
+  margin: 15px;
+  color: white
+}
+
+.row {
+  background-color: #457b9d;
+}
+
+h1 {
+  font-family: fantasy;
+  text-align: center;
+  margin: 5px;
+  background-color: #f79d65;
+  border: 0;
+  border-radius: 5px;
+  color: white;
+}
+
+.surrounding {
+  border: 5px;
+  border-radius: 5px;
+  border-color: white;
+}
+
+body {
+  background-color: #457b9d;
+}
+
+.aniadir {
+  text-align: center;
+  color: white
+}
