--- a/frontend/src/app/sesion/sesion.component.html
+++ b/frontend/src/app/sesion/sesion.component.html
@@ -1,20 +1,30 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 mt-3">
-      <h2>Lista de sesiones</h2>
-      <div class="list-group">
-        <button *ngFor="let sesion of sesiones"
-                class="list-group-item list-group-item-action"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de sesiones</title>
+    <link href="sesion.component.css" rel="stylesheet">
+</head>
+<body>
+  <div class="row vh-100 m-0">
+    <div class="col-md-4">
+      <h1>Lista de sesiones</h1>
+        <div *ngFor="let sesion of sesiones" class="sesiones">
+            <button class="sesion"
                 (click)="elegirSesion(sesion)"
-                [class.active]="sesion === sesionElegida">{{sesion?.inicio | date:'dd/MM/yyyy HH:mm'}} - {{sesion?.fin | date:'dd/MM/yyyy HH:mm'}}</button>
+                [class.active]="sesion === sesionElegida"><div class="text">{{sesion?.inicio | date:'dd/MM/yyyy HH:mm'}} - {{sesion?.fin | date:'dd/MM/yyyy HH:mm'}}</div></button>
       </div>
       
       <br>
-      <button type="button" class="btn btn-outline-success bi bi-plus-lg" (click)="aniadirSesion()"></button>
+      <div class="aniadir">
+        <button type="button" class="btn btn-outline-light bi bi-plus-lg" (click)="aniadirSesion()"></button>
+      </div>
     </div>
     
     <!-- Detalles de sesión -->
-    <div class="col-md-6" *ngIf="sesionElegida">
+    
+    <div class="col-md-8" *ngIf="sesionElegida">
         <app-detalle-sesion [sesion]="sesionElegida"
           (sesionEditada)="editarSesion($event)"
           (sesionEliminada)="eliminarSesion($event)"
@@ -22,4 +32,4 @@
      
     </div>
   </div>
-</div>
+</body>
