--- a/frontend/src/app/detalle-sesion/detalle-sesion.component.html
+++ b/frontend/src/app/detalle-sesion/detalle-sesion.component.html
@@ -7,57 +7,58 @@
     <link href="detalle-sesion.component.css" rel="stylesheet">
 </head>
 <body>
-<div class="row vh-100 m-0">
-  <small class="row m-0">
+<div class="row vh-100 m-0 fondo">
+  <div class="detalles rounded">
+  <div class="titulo">
     <h1 >Detalles de {{sesion?.inicio | date:'dd/MM/yyyy HH:mm'}}</h1>
-  </small>
+  </div>
 
-
-<div class="row">
+<div>
+<div class="datos">
   <label class="col-lg-6 label">Fecha de inicio:</label>
   <span class="col-lg-6 offset-2 offset-md-0">{{sesion?.inicio | date:'dd/MM/yyyy HH:mm'}}</span>
 </div>
-<div class="row">
+<div class="datos">
   <label class="col-lg-6 label">Fecha de fin:</label>
   <span class="col-lg-6 offset-2 offset-md-0">{{sesion?.fin | date:'dd/MM/yyyy HH:mm'}}</span>
 </div>
-<div class="row">
+<div class="datos">
   <label class="col-lg-6 label">Trabajo realizado:</label>
-  <span class="col-lg-6 offset-2 offset-md-0 text">{{sesion?.trabajoRealizado}}</span>
+  <span class="col-lg-6 offset-2 offset-md-0">{{sesion?.trabajoRealizado}}</span>
 </div>
-<div class="row">
+<div class="datos">
   <label class="col-lg-6 label">Vídeo:</label>
   <span class="col-lg-6 offset-2 offset-md-0">{{sesion?.multimedia?.[0] ?? ''}}</span>
 </div>
-<div class="row">
+<div class="datos">
   <label class="col-lg-6 label">Foto:</label>
   <span class="col-lg-6 offset-2 offset-md-0">{{sesion?.multimedia?.[1] ?? ''}}</span>
 </div>
-<div class="row">
+<div class="datos">
   <label class="col-lg-6 label">Descripción:</label>
   <span class="col-lg-6 offset-2 offset-md-0 text">{{sesion?.descripcion}}</span>
 </div>
-<div class="row">
+<div class="datos">
   <label class="col-lg-6 label">Presencial:</label>
   <div class="col-lg-6 offset-2 offset-md-0">
     <input type="checkbox" [ngModel]="sesion?.presencial" disabled>
   </div>
 </div>
-<div class="row">
+<div class="datos">
   <label class="col-lg-6 label">Datos de salud:</label> 
   <div class="col-lg-6 offset-2 offset-md-0">
-      <div class="datos">Pulsaciones: {{sesion?.datosSalud?.[0] ?? '' }}</div>
-      <div class="datos">Peso: {{sesion?.datosSalud?.[1] ?? '' }}</div>
-      <div class="datos">Calorías: {{sesion?.datosSalud?.[2] ??  ''}}</div>
+      <div class="salud">Pulsaciones: {{sesion?.datosSalud?.[0] ?? '' }}</div>
+      <div class="salud">Peso: {{sesion?.datosSalud?.[1] ?? '' }}</div>
+      <div class="salud">Calorías: {{sesion?.datosSalud?.[2] ??  ''}}</div>
   </div>
   
 </div>
 
-<div class="row">
+<div class="botones">
   <button class="col-auto btn btn-outline-danger" (click)="eliminarSesion()">Eliminar <i class="bi bi-trash-fill"></i></button>
-  <div class="col-1"></div>
   <button class="col-auto btn btn-outline-primary" (click)="editarSesion()">Editar <i class="bi bi-pencil-fill"></i></button>
 </div>
-
+</div>
+</div>
 </div>
 </body>
