--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,20 +8,21 @@
 </head>
 <body>
  <div class="row vh-100 m-0">
-    <div class="col-md-4">
-      <div class="planes">
-      <h1>Lista de planes</h1>
-      
+    <div class="col-sm-4 rounded">
+      <div class="planes rounded">
+        <div class="titulo rounded">
+          <h1 class="rounded">Planes</h1>
+        </div>
         <div *ngFor="let plan of planes">
-          <button class="plan"
+          <button class="plan rounded"
           (click)="elegirPlan(plan)"
           [class.active]="plan === planElegido"><div class="text">{{plan?.fechaInicio?.toLocaleString()}} - {{plan?.fechaFin?.toLocaleString()}}</div>
           </button>
         </div>
       
+      </div>
     </div>
-  </div>
-    <div class="col-md-8 caja2" *ngIf="planElegido">
+    <div class="col-sm-8" *ngIf="planElegido">
       <app-sesion [sesiones]="sesionesPlan" [planId]="planElegido.id"></app-sesion>
     </div>
   </div>
