añadir una cosa para que el trabajo no se vaya de la pantalla

--- a/frontend/src/app/detalle-sesion/detalle-sesion.component.html
+++ b/frontend/src/app/detalle-sesion/detalle-sesion.component.html
@@ -24,7 +24,7 @@
 </div>
 <div class="datos">
   <label class="col-lg-6 label">Trabajo realizado:</label>
-  <span class="col-lg-6 offset-2 offset-md-0">{{sesion?.trabajoRealizado}}</span>
+  <span class="col-lg-6 offset-2 offset-md-0 text">{{sesion?.trabajoRealizado}}</span>
 </div>
 <div class="datos">
   <label class="col-lg-6 label">Vídeo:</label>
