--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -9,7 +9,11 @@
     background-color: #a3b7ca;
     margin: 10px;
     padding: 10px;
+    border-color: #355c7d;
+    border-width: 4px;
+    border-style: solid;
 }
+
 
 .text {
     margin: 15px;
