--- a/frontend/src/app/detalle-sesion/detalle-sesion.component.css
+++ b/frontend/src/app/detalle-sesion/detalle-sesion.component.css
@@ -1,17 +1,26 @@
 .text {
-    word-wrap: break-word; /* partirse en palabras si supera el ancho del contenedor */
-    overflow-wrap: break-word; /* lo mismo para navegadores más antiguos */
-    max-width: 100%; 
-  }
+  word-wrap: break-word; /* partirse en palabras si supera el ancho del contenedor */
+  overflow-wrap: break-word; /* lo mismo para navegadores más antiguos */
+  max-width: 100%; 
+}
 
 .label {
-    font-weight: bold;
-    color: white;
-    text-align: left;
+  font-weight: bold;
+  color: white;
+  text-align: left;
+  font-family: cursive;
+  padding-left: 45px;
 }
+
 
 span {
     color: white;
+    text-align: left;
+    font-family: cursive;
+}
+
+.check {
+  text-align: left;
 }
 
 .fondo {
@@ -31,19 +40,23 @@ span {
   background-color: #a3b7ca;
   margin: 10px;
   padding: 10px;
+  border-color: #355c7d;
+  border-width: 4px;
+  border-style: solid;
 }
 
-
 .datos {
-  margin: 15px;
+    text-align: left;
     font-family: cursive;
     color: white
 }
 
 .botones {
-  text-align: center;
+  margin-left: 20px;
+  margin-top: 30px;
+  text-align: left;
 }
 
 button {
-  margin: 10px;
+  margin-left: 15px;
 }
