--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  <div class="row vh-100 m-0">
-    <div class="col-sm-4 rounded">
+    <div class="col-md-4 rounded">
       <div class="planes rounded">
         <div class="titulo rounded">
           <h1 class="rounded">Planes</h1>
