--- a/frontend/src/app/detalle-sesion/detalle-sesion.component.html
+++ b/frontend/src/app/detalle-sesion/detalle-sesion.component.html
@@ -28,11 +28,11 @@
   </div>
   <div class="row">
     <label class="col-lg-4 label">Vídeo:</label>
-    <span class="col-lg-8 offset-2 offset-md-0">{{sesion?.multimedia?.[0] ?? ''}}</span>
+    <span class="col-lg-8 offset-2 offset-md-0 text">{{sesion?.multimedia?.[0] ?? ''}}</span>
   </div>
   <div class="row">
     <label class="col-lg-4 label">Foto:</label>
-    <span class="col-lg-8 offset-2 offset-md-0">{{sesion?.multimedia?.[1] ?? ''}}</span>
+    <span class="col-lg-8 offset-2 offset-md-0 text">{{sesion?.multimedia?.[1] ?? ''}}</span>
   </div>
   <div class="row">
     <label class="col-lg-4 label">Descripción:</label>
@@ -47,8 +47,8 @@
   <div class="row">
     <label class="col-lg-4 label">Datos de salud:</label> 
     <div class="col-lg-8 offset-2 offset-md-0">
-        <div class="datos">Pulsaciones: {{sesion?.datosSalud?.[0] ?? '' }}</div>
-        <div class="datos">Peso: {{sesion?.datosSalud?.[1] ?? '' }}</div>
+        <div class="datos text">Pulsaciones: {{sesion?.datosSalud?.[0] ?? '' }}</div>
+        <div class="datos text">Peso: {{sesion?.datosSalud?.[1] ?? '' }}</div>
         <div class="datos">Calorías: {{sesion?.datosSalud?.[2] ??  ''}}</div>
     </div>
     
