--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de planes</title>
-    <link href="app.component.css" rel="stylesheet">
-</head>
-<body>
+
  <div class="row vh-100 m-0">
     <div class="col-md-4 rounded">
       <div class="planes rounded">
@@ -14,7 +6,7 @@
           <h1 class="rounded">Planes</h1>
         </div>
         <div *ngFor="let plan of planes">
-          <button class="plan rounded"
+          <button class="plan rounded active"
           (click)="elegirPlan(plan)"
           [class.active]="plan === planElegido"><div class="text">{{plan?.fechaInicio?.toLocaleString()}} - {{plan?.fechaFin?.toLocaleString()}}</div>
           </button>
@@ -26,4 +18,3 @@
       <app-sesion [sesiones]="sesionesPlan" [planId]="planElegido.id"></app-sesion>
     </div>
   </div>
-</body>
