--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -42,5 +42,11 @@
     cursor: default;
     color: #355c7d !important;
     font-family: cursive;
-    font-style: bold !important;
 }
+
+.plan:hover{
+    transform: none !important;
+    background-color: #a3b7ca !important;
+    color: #355c7d !important;
+    box-shadow: none !important;
+  }
