Pruebas de detalle-sesion y algún cambio menor.

--- a/frontend/src/app/detalle-sesion/detalle-sesion.component.css
+++ b/frontend/src/app/detalle-sesion/detalle-sesion.component.css
@@ -19,6 +19,12 @@ span {
     font-family: cursive;
 }
 
+a {
+  color: white;
+  text-align: left;
+  font-family: cursive;
+}
+
 .check {
   text-align: left;
 }
